objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Lost_reason__c</fullName>
        <label>Lost reason</label>
        <picklist>
            <picklistValues>
                <fullName>สนใจแต่ติดปัญหาเรื่องหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>สนใจแต่ไม่ใช่ในช่วงเดือนนี้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>สนใจแต่วงเงินที่ลูกค้าต้องการไม่สอดคล้องกับ Source &amp; Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>มีเงินคงเหลือในบัญชีสูงหรือวงเงินเป็นตัวดำ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ยอดขายกิจการลดลง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เพิ่งขอสินเชื่อไม่ถึง 3 เดือน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ลูกค้าคุณสมบัติไม่ดี / ไม่ผ่านหลักเกณฑ์ธนาคาร (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เสียชีวิต / เลิกกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refer ให้ผู้อื่นดำเนินการ (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>สนใจแต่มีประเด็นต่อรองเกี่ยวกับดอกเบี้ย / ค่าธรรมเนียม / ประกันชีวิต</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>สนใจแต่วงเงินที่เสนอไม่เพียงพอ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ (ระบุในหมายเหตุ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เป็นเคสที่เริ่มทำก่อนมีระบบ Sales Smart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ManualSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManualSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NH__c</fullName>
        <formula>IF( TEXT(StageName) = &quot;Partial Loan Setup&quot; || TEXT(StageName) = &quot;All Loan Setup&quot;, 
 Close_Opp_NH__c ,  Owner.Manager.Manager.Manager.UserRole.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NM_by_SP__c</fullName>
        <inlineHelpText>Network Manager</inlineHelpText>
        <label>NM by SP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_App_In__c</fullName>
        <formula>IF ( Text(Actual_Application_Submit_Date__c) &lt;&gt; null || Text( First_Application_SO_Receive_Date__c ) &lt;&gt; null || Number_of_Resubmit__c&gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of App In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_App_Out__c</fullName>
        <formula>IF ( TEXT(Approval_Status__c) = &quot;PA&quot; || TEXT(Approval_Status__c) = &quot;WIP&quot; || TEXT(Approval_Status__c) = null, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of App Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Approved__c</fullName>
        <formula>IF ( TEXT(Approval_Status__c) = &quot;Final Approve&quot; ||  Override_Setup__c = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cancel_Opp_Product__c</fullName>
        <label>Number of Cancel Opp Product</label>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Cancel</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Day_Created__c</fullName>
        <formula>IF(TEXT(Actual_Visit_Date__c) = NULL,NULL,TEXT(TODAY() - Actual_Visit_Date__c) &amp; &quot; Days&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Day Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Lead__c</fullName>
        <label>Number of Lead</label>
        <summaryForeignKey>Opportunity_Lead__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Opp__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Resubmit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Resubmit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Resubmit_by_SP__c</fullName>
        <label>Number of Resubmit by SP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Setup_Opp_Product__c</fullName>
        <label>Number of Setup Opp Product</label>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Setup__c</fullName>
        <formula>IF ( TEXT(StageName) = &quot;Partial Loan Setup&quot; || TEXT(StageName) = &quot;All Loan Setup&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Setup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Waiting_Setup_Opp_Product__c</fullName>
        <label>Number of Waiting Setup Opp Product</label>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Waiting for setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OppClosedDate__c</fullName>
        <formula>IF( text(StageName) =&quot;Closed Lost&quot;,  LastModifiedDate , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppClosedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OppID__c</fullName>
        <formula>APP2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <formula>IF( Account.OwnerId = OwnerId ,True,False)</formula>
        <label>Opp Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_s__c</fullName>
        <formula>IF(TEXT(StageName)=&quot;Create Write Up&quot;,  Amount  ,0)</formula>
        <label>Opportunity_Amount_s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Report__c</fullName>
        <formula>IF( TEXT(StageName) =  &quot;Partial Loan Setup&quot; || TEXT(StageName) =  &quot;All Loan Setup&quot;,
 Close_Opp_Owner__c , Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_SLA_L1__c</fullName>
        <formula>IF( AND( Creator_Segment__c  =&quot;ME&quot;, L1day__c &gt; 14), &quot;เกินกำหนด&quot;, 
IF( AND(Creator_Segment__c =&quot;SE&quot;, L1day__c &gt; 10), &quot;เกินกำหนด&quot;,&quot;ไม่เกินกำหนด&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over SLA L1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_AH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(Owner_AreaName__c, &quot;ผู้บริหารธุรกิจ คป.1-&quot;, &quot;ME เขต &quot;) ,&quot;เขตธุรกิจลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_AreaName__c</fullName>
        <formula>MID(Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1 )+1,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1 )+1)-FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1 )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner AreaName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_FullName__c</fullName>
        <formula>LEFT(Owner_Info__c, FIND(&quot;|&quot;, Owner_Info__c )-1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Info__c</fullName>
        <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName &amp;&quot;|&quot;&amp; Owner.Team_Name__c &amp;&quot;|&quot;&amp; Owner.Area_Name__c &amp;&quot;|&quot;&amp; Owner.Network_Name__c &amp;&quot;|&quot;&amp; Owner.Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_NH__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Owner_NetworkName__c, &quot;เครือข่ายลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;เครือข่ายลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;),&quot;ตะวันออกเฉียงเหนือ&quot;,&quot;อีสาน&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_NetworkName__c</fullName>
        <formula>MID(Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1 )+1)+1,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1 )+1)+1)-FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1 )+1)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner NetworkName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Segment__c</fullName>
        <formula>RIGHT(Owner_Info__c,LEN(Owner_Info__c)-FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1 )+1)+1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_TeamName__c</fullName>
        <formula>MID(Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1,FIND(&quot;|&quot;, Owner_Info__c,FIND(&quot;|&quot;, Owner_Info__c )+1 )-FIND(&quot;|&quot;, Owner_Info__c )-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner TeamName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(Owner_TeamName__c, &quot;ทีมลูกค้าผู้ประกอบการ 1&quot;, &quot;ME&quot;) ,&quot;ทีมลูกค้าผู้ประกอบการ 2&quot;, &quot;SE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Pool__c</fullName>
        <label>Port / Pool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Record_Type__c</fullName>
        <label>Previous Record Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Stage__c</fullName>
        <label>Previous Stage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RCCode__c</fullName>
        <label>RCCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_AHName__c</fullName>
        <formula>Creator_AHName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report AHName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_AH__c</fullName>
        <formula>Creator_AH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_NHName__c</fullName>
        <formula>Creator_NHName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report NHName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_NH__c</fullName>
        <formula>Creator_NH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_RMName__c</fullName>
        <formula>Creator_RM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report RMName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Segment__c</fullName>
        <formula>Creator_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_TM_Name__c</fullName>
        <formula>Creator_TM_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report TM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Team__c</fullName>
        <formula>Creator_Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_First_Amount_By_SP__c</fullName>
        <inlineHelpText>วงเงินที่ทำการขอในตอนแรก</inlineHelpText>
        <label>Request First Amount By SP</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Lastest_Amount_By_SP__c</fullName>
        <inlineHelpText>วงเงินที่ทำการขอล่าสุด (เช่น Resubmit แล้ววงเงินไม่ได้ตามที่ขอไปครั้งแรก)</inlineHelpText>
        <label>Request Lastest Amount By SP</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Process_Name__c</fullName>
        <label>Request Process Name</label>
        <picklist>
            <picklistValues>
                <fullName>Override Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backward Stage</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <description>ไม่ใช้แล้ว เปลี่ยนไปใช้ของ SP แทน</description>
        <label>Requested Amount</label>
        <summarizedField>Opportunity_Product__c.Requested_Amount__c</summarizedField>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Requested_Amount_s__c</fullName>
        <formula>IF( Number_of_Resubmit_by_SP__c = 0, 

IF(OR(TEXT(StageName)=&quot;Waiting for Credit Approval&quot;,TEXT(StageName)=&quot;Case is Rejected&quot;),   Request_First_Amount_By_SP__c   ,0), 

IF(OR(TEXT(StageName)=&quot;Waiting for Credit Approval&quot;,TEXT(StageName)=&quot;Case is Rejected&quot;),    Request_Lastest_Amount_By_SP__c    ,0))</formula>
        <label>Requested_Amount_s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Amount_setup__c</fullName>
        <formula>IF( Request_Lastest_Amount_By_SP__c = 0 , Request_First_Amount_By_SP__c, Request_Lastest_Amount_By_SP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Amount_Setup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resubmit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubmit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_UW_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior UW Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>UW</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup_Amount__c</fullName>
        <label>Setup Amount</label>
        <summarizedField>Opportunity_Product__c.Setup_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Setup_Amount_s__c</fullName>
        <formula>IF(OR(TEXT(StageName)=&quot;Partial Loan Setup&quot;, TEXT(StageName)=&quot;All Loan Setup&quot;),  Setup_Amount__c ,0)</formula>
        <label>Setup_Amount_s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage_for_L2__c</fullName>
        <formula>IF ( TEXT(StageName) = &quot;Case is Rejected&quot; , 
     IF ( TEXT(Approval_Status__c) = &quot;Lapse&quot;,&quot;คืนเรื่อง&quot;,
          IF (TEXT(Approval_Status__c) = &quot;Decline&quot;,&quot;ปฏิเสธ&quot;,&quot;UW ปฏิเสธ/คืนเรื่อง&quot;))
,IF ( TEXT(StageName) = &quot;Waiting for Credit Approval&quot; ,&quot;UW พิจารณาความเสี่ยง&quot;,TEXT(StageName)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage for L2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Channel__c</fullName>
        <label>Submission Channel</label>
        <picklist>
            <controllingField>Credit_Model__c</controllingField>
            <picklistValues>
                <fullName>CMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non CMAS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Issue__c</fullName>
        <label>Submit Issue</label>
        <picklist>
            <picklistValues>
                <fullName>New Credit</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Issue_by_SP__c</fullName>
        <label>Submit Issue by SP</label>
        <picklist>
            <picklistValues>
                <fullName>New Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not New Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TM_by_SP__c</fullName>
        <label>TM by SP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>IF( TEXT(StageName) = &quot;Partial Loan Setup&quot; || TEXT(StageName) = &quot;All Loan Setup&quot;, 
 Close_Opp_TM__c ,   Owner.Manager.UserRole.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name_del__c</fullName>
        <formula>IF( TEXT(StageName) = &quot;Partial Loan Setup&quot; || TEXT(StageName) = &quot;All Loan Setup&quot;, 
 Close_Opp_TM__c ,   Owner.Manager.UserRole.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name_DEL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tentative_Application_Submit_Date__c</fullName>
        <label>Tentative Application Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>IF(TEXT(StageName)=&quot;Stock Negotiation&quot;, Amount_Report__c , 
IF(TEXT(StageName)=&quot;Create Write Up&quot;,  Opportunity_Amount_s__c  , 
IF(OR(TEXT(StageName)=&quot;Waiting for Credit Approval&quot;,  
      TEXT(StageName)=&quot;Case is rejected&quot;), Requested_Amount_s__c  , 
IF(TEXT(StageName)= &quot;Waiting for Credit Setup&quot;,  Approved_Amount_s__c ,
IF(OR(TEXT(StageName)=&quot;Partial Loan Setup&quot;, 
      TEXT(StageName)=&quot;All Loan Setup&quot;),  Setup_Amount_s__c  , 
IF(OR(TEXT(StageName)=&quot;	Auto Closed&quot;, TEXT(StageName)=&quot;Case is Rejected&quot;, 
      TEXT(StageName)=&quot;Closed Lost&quot;),  Lost_Amount_s__c  ,0))))))</formula>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_BA_Prosaving__c</fullName>
        <label>Total BA Prosaving</label>
        <summarizedField>Opportunity_Product__c.BA_Prosaving__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_BA_Protection__c</fullName>
        <label>Total BA Protection</label>
        <summarizedField>Opportunity_Product__c.BA_Protection__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Front_End_Fee__c</fullName>
        <label>Total Front End Fee</label>
        <summarizedField>Opportunity_Product__c.Front_End_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Opp_Product__c</fullName>
        <label>Total Number of Opp Product</label>
        <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UW_Color__c</fullName>
        <label>UW Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UW_Comment_Opp__c</fullName>
        <label>UW Comment Opp</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UW_Decision_Opp__c</fullName>
        <label>UW Decision Opp</label>
        <picklist>
            <picklistValues>
                <fullName>อยู่ระหว่างตัดสินใจ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Go</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UW_Final_Comment__c</fullName>
        <description>คำปรึกษาจาก UW</description>
        <inlineHelpText>คำปรึกษาจาก UW</inlineHelpText>
        <label>UW Final Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UW_Lane__c</fullName>
        <label>UW Lane</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UW_My_Stock__c</fullName>
        <formula>if($User.Id = Senior_UW_Name__r.Id || $User.Id = Head_of_UW_Name__r.Id, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UW My Stock</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Stage_by_Close_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Stage by Close Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Want_to_close_as_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Want to close as Lost?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZM_by_SP__c</fullName>
        <inlineHelpText>Zone Manager</inlineHelpText>
        <label>ZM by SP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diff_Requested_Amount__c</fullName>
        <formula>Request_First_Amount_By_SP__c - Approve_Latest_Amount_By_SP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>diff Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>opp_closed_date__c</fullName>
        <label>opp closed date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>CBS_All_My_Opportunity</fullName>
        <columns>Opportunity_Owner_Report__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Application_Number__c</columns>
        <columns>Request_First_Amount_By_SP__c</columns>
        <columns>Approve_Latest_Amount_By_SP__c</columns>
        <columns>First_Application_SO_Receive_Date__c</columns>
        <columns>Approval_Workout_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Submit_Issue_by_SP__c</field>
            <operation>equals</operation>
            <value>NewCreditSP</value>
        </filters>
        <label>CBS All My Opportunity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CBS_All_My_Opportunity_Case_Rejected</fullName>
        <columns>Opportunity_Owner_Report__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Application_Number__c</columns>
        <columns>Request_First_Amount_By_SP__c</columns>
        <columns>Approve_Latest_Amount_By_SP__c</columns>
        <columns>First_Application_SO_Receive_Date__c</columns>
        <columns>Approval_Workout_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Submit_Issue_by_SP__c</field>
            <operation>equals</operation>
            <value>NewCreditSP</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Case is Rejected</value>
        </filters>
        <label>CBS All My Opportunity (Case Rejected)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CBS_All_My_Opportunity_Setup</fullName>
        <columns>Opportunity_Owner_Report__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Application_Number__c</columns>
        <columns>Request_First_Amount_By_SP__c</columns>
        <columns>Approve_Latest_Amount_By_SP__c</columns>
        <columns>First_Application_SO_Receive_Date__c</columns>
        <columns>Approval_Workout_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Submit_Issue_by_SP__c</field>
            <operation>equals</operation>
            <value>NewCreditSP</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Partial Loan Setup,All Loan Setup</value>
        </filters>
        <label>CBS All My Opportunity (Setup)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CBS_All_My_Opportunity_Wait_Approve</fullName>
        <columns>Opportunity_Owner_Report__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Application_Number__c</columns>
        <columns>Request_First_Amount_By_SP__c</columns>
        <columns>Approve_Latest_Amount_By_SP__c</columns>
        <columns>First_Application_SO_Receive_Date__c</columns>
        <columns>Approval_Workout_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Submit_Issue_by_SP__c</field>
            <operation>equals</operation>
            <value>NewCreditSP</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Waiting for Credit Approval</value>
        </filters>
        <label>CBS All My Opportunity (Wait Approve)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CBS_All_My_Opportunity_Wait_Setup</fullName>
        <columns>Opportunity_Owner_Report__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Application_Number__c</columns>
        <columns>Request_First_Amount_By_SP__c</columns>
        <columns>Approve_Latest_Amount_By_SP__c</columns>
        <columns>First_Application_SO_Receive_Date__c</columns>
        <columns>Approval_Workout_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Submit_Issue_by_SP__c</field>
            <operation>equals</operation>
            <value>NewCreditSP</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Waiting for Credit Setup</value>
        </filters>
        <label>CBS All My Opportunity (Wait for Setup)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DCmorethan45</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>First_Application_SO_Receive_Date__c</columns>
        <columns>Approval_Workout_Date__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>L1day__c</columns>
        <columns>L2day__c</columns>
        <columns>L3day__c</columns>
        <columns>L1startdate__c</columns>
        <columns>L1enddate__c</columns>
        <columns>L2endDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pre Approve,Lapse,Decline</value>
        </filters>
        <filters>
            <field>First_Application_SO_Receive_Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <label>DCmorethan45</label>
        <language>en_US</language>
        <sharedTo>
            <group>SME_Process_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>